# arxiv-curator

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: weekly-update.yml
examples/: pipeline.sh  suggest_and_check.sh
src/arxiv_curator/: __init__.py  arxiv_api.py  cli.py  digest.py  fieldmap.py  formatter.py  generator.py  models.py  parser.py  ranker.py  semantic_scholar.py
tests/: conftest.py  test_arxiv_api.py  test_cli.py  test_cli_integration.py  test_digest.py  test_fieldmap.py  test_formatter.py  test_generator.py  test_parser.py  test_ranker.py  test_semantic_scholar.py
