[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-curator"
version = "0.1.0"
description = "arXiv paper search and curation CLI tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "rsasaki0109"},
]
keywords = ["arxiv", "paper", "search", "curation", "awesome-list"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "arxiv>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = ["pytest"]
web = ["streamlit>=1.30.0"]

[project.urls]
Homepage = "https://github.com/rsasaki0109/arxiv-curator"
Repository = "https://github.com/rsasaki0109/arxiv-curator"
Issues = "https://github.com/rsasaki0109/arxiv-curator/issues"

[project.scripts]
arxiv-curator = "arxiv_curator.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
